added case study for digital transf framework

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -4,7 +4,7 @@ title: 18F Consulting
 subtitle: Building a high-performing team of digital experts.
 permalink: /work/18f-consulting/
 image: /img/projects/18f_consulting/18f-consulting.jpg
-image_description: 18F Consulting logo.
+image_description: Logo of 18F Consulting.
 feature_image: true
 order: 400
 tags: [digital transformation, chris cairns, robert read]
@@ -38,7 +38,7 @@ news_posts:
     url: https://fcw.com/articles/2014/10/27/18f-consulting-group.aspx
   - title: 18F expands efforts to state and local governments
     url: https://www.fedscoop.com/18f-expands-efforts-to-state-and-local-governments/
-  - title: Feds Extend 18F’s Silicon Valley Expertise to Cities, States
+  - title: Feds Extend 18F's Silicon Valley Expertise to Cities, States
     url: http://www.govtech.com/federal/feds-extend-18fs-silicon-valley-expertise-to-cities-states.html
 project_url:
 source_code_url:
@@ -82,7 +82,7 @@ source_code_url:
     Over the course of a year, Chris and Robert recruited, hired, led, and managed
     high-performing multidisciplinary teams &mdash; from both the public and private sectors &mdash;
     who worked hand-in-hand with numerous agencies in pursuit of digital mastery.
-    These teams produced some of 18F’s most notable, innovative, and transformative
+    These teams produced some of 18F's most notable, innovative, and transformative
     client work and reshaped how GSA delivers technology services to the rest of government.
   </p>
 {% endcapture %}
