--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -4,7 +4,7 @@ title: Agile Acquisition Framework
 subtitle: Aligning acquisition practices with agile delivery practices.
 permalink: /work/agile-acquisition-framework/
 image: /img/projects/agile_acquisition_framework/agile-acquisition-framework-venn-diagram.jpg
-image_description: A Venn diagram showing the intersection between acquisition and agile.
+image_description: An image of a Venn diagram showing the intersection between acquisition and agile.
 feature_image: true
 order: 200
 tags: [digital procurement, chris cairns, robert read]
