--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -4,7 +4,7 @@ title: Agile Delivery Services Marketplace
 subtitle: Streamlining procurement of custom software solutions.
 permalink: /work/agile-delivery-services-marketplace/
 image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.jpg
-image_description: Abstract image representing a marketplace of agile vendors.
+image_description: An abstract image representing a marketplace of agile vendors.
 feature_image: true
 order: 100
 tags: [digital procurement, chris cairns, robert read]
