added opencompany case study

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -4,7 +4,7 @@ title: 18F Consulting
 subtitle: Building a high-performing team of digital experts.
 permalink: /work/18f-consulting/
 image: /img/projects/18f_consulting/18f-consulting.jpg
-image_description: Logo of 18F Consulting.
+image_description: The logo of 18F Consulting.
 feature_image: true
 order: 400
 tags: [digital transformation, chris cairns, robert read]
