--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -92,19 +92,19 @@ source_code_url:
       A "show, don't tell" or "prototype-as-proposal" approach in which vendors
       were required to submit working prototypes (over written narratives)
       using <a href="https://open.fda.gov/" target="_blank">openFDA</a> as the
-      basis for evaluating capabilities;
+      basis for evaluating capabilities
     </li>
 
     <li>
       A robust contractual clause that, by default, requires all vendors to
       agree to commit all data, source code, and documentation produced for the
-      government to the public domain; and
+      government to the public domain
     </li>
 
     <li>
       Combination of a blanket purchase agreement contract type under IT Schedule 70,
       ready-made assets (for example, solicitation templates), performance work statements,
-      oral presentations, and other methods for rapidly issuing and awarding task/work orders.
+      oral presentations, and other methods for rapidly issuing and awarding task/work orders
     </li>
   </ul>
 {% endcapture %}
