add us navy protosketching case study

--- a/_projects/opencompany.html
+++ b/_projects/opencompany.html
@@ -19,14 +19,18 @@ technologies:
   - Microservices
   - RethinkDB
   - Amazon Web Services
+  - GitHub
 practices:
   - User Experience Design
   - Lean Startup
+  - Responsive Web Design
   - Agile Development
+  - DevOps
   - API-first Development
   - RESTful, HATEOAS API Architecture
   - Microservices Architecture
-  - Open Source
+  - Open Source Development
+  - Cloud Hosting
 screenshots:
 news_posts:
 project_url: https://opencompany.com/
