--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -21,11 +21,17 @@ technologies:
   - PostgreSQL
   - Twilio
   - Amazon Web Services
+  - GitHub
 practices:
   - User Experience Design
   - Lean Startup
+  - Mobile-first Design
   - Agile Development
+  - DevOps
+  - API-first Development
   - RESTful API Architecture
+  - Web and Native Apps
+  - Cloud Hosting
 screenshots:
 news_posts:
   - title: TechCrunch Disrupt SF Battlefield Semifinals&#58; The Judges React
