add dol legacy system modernization case study

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -16,10 +16,13 @@ technologies:
   - Lever (recruiting software)
   - G Suite
   - Trello
-  - GitHub
   - Slack
   - Mural
   - appear.in
+  - cloud.gov / Amazon Web Services
+  - Federalist / Jekyll
+  - GitHub
+  - Apple
 practices:
   - Servant Leadership
   - Team of Teams
@@ -29,6 +32,7 @@ practices:
   - Performance Profiles
   - Google Interview Practices
   - Open Innovation
+  - Virtual Collaboration
   - Knowledge Management
   - Peer Mentoring and Coaching
   - Continuous Improvement
