change dol case study image

--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -3,8 +3,8 @@ layout: default
 title: Legacy System Modernization at the DOL
 subtitle: De-risking the complexities of modernizing an aging system.
 permalink: /work/dol-legacy-system-modernization/
-image: /img/projects/dol_legacy_system_modernization/legacy-systems.jpg
-image_description: Illustration showing three legacy systems with a nuclear symbol.
+image: /img/projects/dol_legacy_system_modernization/old-mainframe-system.jpg
+image_description: Picture of an old mainframe system.
 feature_image: true
 order: 1000
 tags: [digital services delivery, robert read, chris cairns]
