case study edits

--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -20,22 +20,22 @@ technologies:
   - Mural
   - appear.in
   - cloud.gov / Amazon Web Services
-  - Federalist / Jekyll
+  - Federalist / GitHub Pages / Jekyll
   - GitHub
   - Apple
 practices:
-  - Servant Leadership
-  - Team of Teams
-  - Management by Objectives
-  - Schedule A(r) Hiring Authority
-  - Civic Recruiting
-  - Performance Profiles
-  - Google Interview Practices
-  - Open Innovation
-  - Virtual Collaboration
-  - Knowledge Management
-  - Peer Mentoring and Coaching
-  - Continuous Improvement
+  - Servant leadership
+  - Team of teams
+  - Management by objectives
+  - Schedule A(r) hiring authority
+  - Civic recruiting
+  - Performance profiles
+  - Google interview practices
+  - Open innovation
+  - Virtual collaboration
+  - Knowledge management
+  - Peer mentoring and coaching
+  - Continuous improvement
 screenshots:
 news_posts:
   - title: 18F to launch consulting group and project dashboard
