--- a/_projects/agile_acquisition_framework.html
+++ b/_projects/agile_acquisition_framework.html
@@ -15,12 +15,13 @@ project_members:
 technologies:
   - G Suite
   - GitHub
+  - GitHub Pages
   - Jekyll
 practices:
-  - Customer Research
-  - Industry Research
-  - Lean Startup
-  - Iterative and Incremental Development
+  - Customer research
+  - Industry research
+  - Lean startup
+  - Iterative and incremental development
 screenshots:
 news_posts:
   - title: 18F Launches RFP Ghostwriting and Review Service
@@ -89,7 +90,7 @@ source_code_url:
 
 {% capture results %}
   <p>
-    Notable results thus far include:
+    Thus far, notable results include:
   </p>
 
   <ul>
