--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Agile Delivery Services Marketplace
-subtitle: Streamlining procurement of custom software solutions.
+subtitle: Streamlining the procurement of custom software solutions.
 permalink: /work/agile-delivery-services-marketplace/
 image: /img/projects/agile_delivery_services_marketplace/agile-delivery-services-marketplace.jpg
 image_description: An abstract image representing a marketplace of agile vendors.
@@ -13,19 +13,21 @@ project_members:
   - chris-cairns
   - robert-read
 technologies:
-  - GitHub
   - G Suite
+  - GitHub
+  - GitHub Pages
+  - Jekyll
   - Adobe Connect
 practices:
-  - Lean Startup
-  - Market Research
-  - Customer Research
-  - Acquisition Planning
-  - Vendor Outreach
-  - Challenge-based Acquisition
-  - Best Value Contracting
-  - Public Domain Contracting
-  - Oral Presentations
+  - Lean startup
+  - Market research
+  - Customer research
+  - Acquisition planning
+  - Vendor outreach
+  - Challenge-based acquisition
+  - Best-value contracting
+  - Public-domain contracting
+  - Oral presentations
 screenshots:
 news_posts:
   - title: GSA's agile RFI beginning of 'systemic change' in IT acquisition
@@ -110,7 +112,7 @@ source_code_url:
 {% endcapture %}
 
 {% capture results %}
-  <p>Notable results thus far include:</p>
+  <p>Thus far, notable results include:</p>
 
   <ul>
     <li>
