--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -12,17 +12,18 @@ excerpt: A pilot program designed to accelerate the adoption of digital acquisit
 project_members:
   - chris-cairns
 technologies:
-  - Instructional Media
+  - Instructional media
   - G Suite
   - GitHub
+  - GitHub Pages
   - Jekyll
 practices:
-  - Instructional Design
-  - Classroom Training
-  - Train the Trainer
-  - Learning by Doing
-  - Expert Coaching
-  - Knowledge Management
+  - Instructional design
+  - Classroom training
+  - Train the trainer
+  - Learning by doing
+  - Expert coaching
+  - Knowledge management
 screenshots:
 news_posts:
   - title: Fostering a Culture of Innovation Across Government through Acquisition Innovation Labs
