--- a/_projects/dol_legacy_system_modernization.html
+++ b/_projects/dol_legacy_system_modernization.html
@@ -19,18 +19,18 @@ technologies:
   - APIs
   - AJAX
   - SQLAlchemy
-  - DB2 / DB2 Stored Procedures
+  - DB2 / DB2 stored procedures
   - Puppet
-  - Automated Testing Frameworks
+  - Automated testing frameworks
   - Amazon Web Services
 practices:
-  - Spike Solutions
-  - Rapid Prototyping
-  - API Encapsulation
-  - Automated Testing
-  - Programmatic Deployment Scripts
-  - Cloud Hosting
-  - Virtual Collaboration
+  - Spike solutions
+  - Rapid prototyping
+  - API encapsulation
+  - Automated testing
+  - Programmatic deployment scripts
+  - Cloud hosting
+  - Virtual collaboration
 screenshots:
 news_posts:
 project_url:
@@ -48,7 +48,7 @@ source_code_url:
   <p>
     A Department of Labor (DOL) legacy system with a desktop-only graphical user
     interface (GUI) needed a web-based GUI. By careful inspection of the code and
-    experimentation, a deep “spike” solution was created that allows a small fraction
+    experimentation, a deep "spike" solution was created that allows a small fraction
     of the system to be implemented with a web-based system utilizing in-situ business
     rules and stored procedures. This spike is the basis of planned broadening to provide
     a practical means of rewriting the entire legacy system, thus de-risking the whole project.
