--- a/_projects/opencompany.html
+++ b/_projects/opencompany.html
@@ -8,7 +8,7 @@ image_description: The logo of OpenCompany.
 feature_image: true
 order: 700
 tags: [digital services delivery, sean johnson]
-excerpt: An open source digital platform for organizations to drive new levels of alignment through radical openness and transparency.
+excerpt: An open-source, digital platform for organizations to drive new levels of alignment through radical openness and transparency.
 project_members:
   - sean-johnson
 technologies:
@@ -21,16 +21,16 @@ technologies:
   - Amazon Web Services
   - GitHub
 practices:
-  - User Experience Design
-  - Lean Startup
-  - Responsive Web Design
-  - Agile Development
+  - User experience design
+  - Lean startup
+  - Responsive web design
+  - Agile development
   - DevOps
-  - API-first Development
-  - RESTful, HATEOAS API Architecture
-  - Microservices Architecture
-  - Open Source Development
-  - Cloud Hosting
+  - API-first development
+  - RESTful, HATEOAS API architecture
+  - Microservices architecture
+  - Open-source development
+  - Cloud hosting
 screenshots:
 news_posts:
 project_url: https://opencompany.com/
@@ -43,7 +43,7 @@ source_code_url: https://github.com/open-company
 
 {% capture summary %}
   <p>
-    OpenCompany is an open source digital platform that organizations use to drive
+    OpenCompany is an open-source, digital platform that organizations use to drive
     new levels of alignment and engagement through radical openness and transparency.
   </p>
 {% endcapture %}
@@ -58,9 +58,9 @@ source_code_url: https://github.com/open-company
 
 {% capture solution %}
   <p>
-    Sean Johnson led the OpenCompany development team to create an open source digital
-    transparency platform for organizations. Referred to as "GitHub for the rest of your
-    organization," it simplifies how leaders share key business information such as
+    Sean Johnson led the OpenCompany development team to create an open-source,
+    digital transparency platform for organizations. Referred to as "GitHub for the rest of 
+    your organization," it simplifies how leaders share key business information such as
     strategic objectives, performance results, and finances with internal and external
     stakeholders. By making this information open, accessible, and interactive, the
     platform enables organizations to align and engage stakeholders in ways that inspire
@@ -70,7 +70,7 @@ source_code_url: https://github.com/open-company
 {% endcapture %}
 
 {% capture results %}
-  <p>Notable results thus far include:</p>
+  <p>Thus far, notable results include:</p>
 
   <ul>
     <li>
