--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -13,13 +13,13 @@ project_members:
   - robert-read
   - chris-cairns
 technologies:
-  - Existing Technology Stack
+  - Existing technology stack
 practices:
-  - Agile Workshop Facilitation
-  - User-centered Design
-  - Scrum Framework
-  - Team Building
-  - Training and Coaching
+  - Agile workshop facilitation
+  - User-centered design
+  - Scrum framework
+  - Team building
+  - Training and coaching
 screenshots:
 news_posts:
   - title: A story of an agile workshop
