--- a/_projects/talkto.html
+++ b/_projects/talkto.html
@@ -23,15 +23,15 @@ technologies:
   - Amazon Web Services
   - GitHub
 practices:
-  - User Experience Design
-  - Lean Startup
-  - Mobile-first Design
-  - Agile Development
+  - User experience design
+  - Lean startup
+  - Mobile-first design
+  - Agile development
   - DevOps
-  - API-first Development
-  - RESTful API Architecture
-  - Web and Native Apps
-  - Cloud Hosting
+  - API-first development
+  - RESTful API architecture
+  - Web and native apps
+  - Cloud hosting
 screenshots:
 news_posts:
   - title: TechCrunch Disrupt SF Battlefield Semifinals&#58; The Judges React
