--- a/_projects/tsa_cloud_adoption.html
+++ b/_projects/tsa_cloud_adoption.html
@@ -19,14 +19,14 @@ technologies:
   - Splunk
   - GitHub
 practices:
-  - Agile Cloud Migration
-  - Hybrid Cloud Architecture
-  - Infrastructure as Code
-  - Continuous Integration
-  - Deployment Automation
-  - Security Controls Automation
-  - Training and Coaching
-  - Civic Recruiting
+  - Agile cloud migration
+  - Hybrid-cloud architecture
+  - Infrastructure as code
+  - Continuous integration
+  - Deployment automation
+  - Security controls automation
+  - Training and coaching
+  - Civic recruiting
 screenshots:
 news_posts:
   - title: Creating a Culture for IT Innovation
@@ -41,9 +41,9 @@ source_code_url:
 
 {% capture summary %}
   <p>
-    The Transformation Security Administration (TSA) CIO needed help undertaking a
-    broad cloud transformation initiative, so a specialized team of site reliability
-    engineers was provided to jumpstart the transition.
+    The Transformation Security Administration (TSA) Chief Information Officer (CIO)
+    needed help undertaking a broad cloud transformation initiative, so a specialized
+    team of site reliability engineers was provided to jumpstart the transition.
   </p>
 {% endcapture %}
 
