--- a/_projects/us_navy_protosketching.html
+++ b/_projects/us_navy_protosketching.html
@@ -19,12 +19,12 @@ technologies:
   - Heroku
   - GitHub
 practices:
-  - Rapid Prototyping
-  - User Story Writing and Estimation
-  - User Testing
-  - Responsive Web Design
-  - Open Source Development
-  - Cloud Hosting
+  - Rapid prototyping
+  - User story writing and estimation
+  - User testing
+  - Responsive web design
+  - Open-source development
+  - Cloud hosting
 screenshots:
 news_posts:
   - title: How protosketching can help digital development
