--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -8,18 +8,19 @@ image_description: An image showing various digital transformation dimensions.
 feature_image: true
 order: 500
 tags: [digital transformation, chris cairns]
-excerpt: A comprehensive framework designed to help agencies transform into digitally powered organizations.
+excerpt: A comprehensive framework designed to help agencies transform into digitally-powered organizations.
 project_members:
   - chris-cairns
 technologies:
   - G Suite
   - GitHub
+  - GitHub Pages
   - Jekyll
 practices:
-  - Customer Research
-  - Industry Research
-  - Lean Startup
-  - Participatory Design
+  - Customer research
+  - Industry research
+  - Lean startup
+  - Participatory design
 screenshots:
 news_posts:
   - title: Transforming U.S. government services in a digital world
@@ -40,7 +41,7 @@ source_code_url:
 {% capture summary %}
   <p>
     The Digital Transformation Framework is a comprehensive framework designed
-    to help agencies transform into digitally powered organizations.
+    to help agencies transform into digitally-powered organizations.
   </p>
 {% endcapture %}
 
@@ -56,7 +57,7 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    To address this challenge, Chris Cairns, as a member of 18F and the Federal CIO's
+    To address this challenge, Chris Cairns, as a member of 18F and the Federal Chief Information Officer's
     Technology Transformation Task Force, the precursor to the American Technology Council,
     collaborated with multiple government technology executives and renowned transformation
     experts to develop a comprehensive framework for digital transformation. The framework
@@ -67,7 +68,7 @@ source_code_url:
 {% endcapture %}
 
 {% capture results %}
-  <p>Notable results to-date include:</p>
+  <p>To-date, notable results include:</p>
 
   <ul>
     <li>
