--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -3,8 +3,8 @@ layout: default
 title: Digital Acquisition Accelerator
 subtitle: Accelerating the adoption of digital acquisition practices.
 permalink: /work/digital-acquisition-accelerator/
-image: /img/projects/digital_acquisition_accelerator/digital-acquisition-accelerator-phases.jpg
-image_description: An image showing the five phases of the Digital Acquisition Accelerator.
+image: /img/projects/digital_acquisition_accelerator/digital-acquisition-accelerator-speedometer.jpg
+image_description: An image of a speedometer.
 feature_image: true
 order: 300
 tags: [digital procurement, chris cairns]
