add case mgmt blog post

--- a/_projects/ssa_agile_microsprints.html
+++ b/_projects/ssa_agile_microsprints.html
@@ -95,7 +95,7 @@ source_code_url:
 
     <li>
       Gave leadership practical insight into the transformative nature of
-      agile, inspiring a decision to accelerate its adoption that's led to
+      agile, inspiring a decision to accelerate its adoption that has led to
       a promising turnaround
     </li>
   </ul>
