--- a/pages/about.html
+++ b/pages/about.html
@@ -8,8 +8,6 @@ permalink: /about/
   header_title = 'We&apos;re Skylight!'
   header_content_class = 'page-header-content-1'
   header_content = 'Our mission is to make government work in a digital world.'
-  header_content_img = 'https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150'
-  header_content_img_description = ''
 %}
 
 <div class="about-us">
@@ -23,14 +21,12 @@ permalink: /about/
       <div class="about-info-row">
         <div class="about-info-col">
           <p>
-            Skylight was founded in 2016. We're currently made up of X people and one ferret.
+            Skylight was founded in 2016. We're currently made up of 8 people and one ferret.
             We're working hard to maintain disciplined growth while at the same time cultivating
             an incredible culture. Our headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445" target="_blank">Chapel Hill, North Carolina</a>,
             but we're a distributed and remote-friendly team. A lot of our client work
             originates from Washington DC.
           </p>
-
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
 
           <p>
             We're impact junkies who are driven to create better outcomes for the public through
@@ -136,7 +132,7 @@ permalink: /about/
             If you’d like to inquire about hiring us for a job, <a href="/hire-us/">fill out this short form</a>.
             If you're interested in joining our team, <a href="/join/">send us your information</a>.
             If you'd like to explore forming a partnership to pursue government opportunities,
-            <a href="/alliances/">let's talk</a>.
+            <a href="/alliances/">let's talk business</a>.
           </p>
 
           <p>
