added software badness quantified blog post

--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -4,7 +4,7 @@ title: Digital Transformation Framework
 subtitle: Transforming agencies into digitally powered organizations.
 permalink: /work/digital-transformation-framework/
 image: /img/projects/digital_transformation_framework/digital-transformation-framework.jpg
-image_description: An image showing various digital transformation dimensions.
+image_description: A diagram image showing various digital transformation dimensions.
 feature_image: true
 order: 500
 tags: [digital transformation, chris cairns]
