add project team member tags

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: Home
       <div class="landing-header-row">
         <div class="landing-header-col">
           <h2>Solving important problems</h2>
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+          <img style="height: 200px;" class="img-fluid" src="img/about-infographic.png" alt="An abstract image of a computer with a government building in a browser, encircled by icons that represent important government functions.">
         </div>
       </div>
 
@@ -72,7 +72,7 @@ title: Home
       <div class="landing-header-row">
         <div class="landing-header-col">
           <h2>Services designed for your success</h2>
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+          <img style="height: 200px;" class="img-fluid" src="img/services-infographic.png" alt="TBD">
         </div>
       </div>
 
@@ -120,7 +120,7 @@ title: Home
       <div class="landing-header-row">
         <div class="landing-header-col">
           <h2>Experience that speaks volumes</h2>
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+          <img style="height: 200px;" class="img-fluid" src="img/experience-infographic.png" alt="TBD">
         </div>
       </div>
 
@@ -151,7 +151,7 @@ title: Home
         <div class="landing-header-col">
           <h2 class="hidden-md-up">Strengthening your culture through ours</h2>
           <h2 class="hidden-sm-down">Strengthening your culture <br> through ours</h2>
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+          <img style="height: 200px;" class="img-fluid" src="img/culture-infographic.png" alt="TBD">
         </div>
       </div>
 
