restyle the landing page and change the copy

--- a/index.html
+++ b/index.html
@@ -30,154 +30,95 @@ title: Home
 
   <div class="landing-body">
 
-    <section class="landing-section">
-      <div class="landing-header-row">
-        <div class="landing-header-col">
-          <h2>Solving important problems</h2>
-          <img style="height: 200px;" class="img-fluid" src="img/about-infographic.png" alt="An abstract image of a computer with a government building in a browser, encircled by icons that represent important government functions.">
-        </div>
-      </div>
+    <section class="landing-section-row-temp">
+      <div class="landing-section-col-temp">
+        <h2>Solving important problems</h2>
 
-      <div class="landing-content-row">
-        <div class="landing-content-col">
-          <p>
-            Every day millions of people &mdash; from veterans to immigrants &mdash;
-            depend on government services to fulfill their needs. But too often
-            these services are delivered using outmoded policies, practices,
-            and technologies, resulting in frustrating user experiences and
-            inefficient use of taxpayer dollars.
-          </p>
+        <img src="img/about-infographic.png" alt="An abstract image of a government building, encircled by icons that represent important government functions.">
 
-          <p>
-            Enter Skylight, a HUBZone-certified digital consultancy based out of
-            Chapel Hill, North Carolina. We’re the founders behind successful startups
-            inside and outside of government, including 18F and TalkTo.
-          </p>
+        <p>
+          Every day millions of people &mdash; from veterans to immigrants &mdash;
+          depend on government services to fulfill their needs. But too often
+          these services are delivered using outmoded policies, practices,
+          and technologies, resulting in frustrating user experiences and
+          inefficient use of taxpayer dollars.
+        </p>
 
-          <p>
-            Our mission is to make government work in a digital world using
-            design, technology, and procurement.
-          </p>
-        </div>
-      </div>
+        <p>
+          Our mission is to make government work in a digital world using design,
+          technology, and procurement.
+        </p>
 
-      <div class="landing-cta-row">
-        <div class="landing-cta-col">
-          <a class="landing-cta" href="/about/" role="button">About us</a>
-        </div>
+        <a href="/about/" role="button">About us</a>
       </div>
     </section>
 
-    <section class="landing-section">
-      <div class="landing-header-row">
-        <div class="landing-header-col">
-          <h2>Services designed for your success</h2>
-          <img style="height: 200px;" class="img-fluid" src="img/services-infographic.png" alt="TBD">
-        </div>
-      </div>
+    <section class="landing-section-row-temp">
+      <div class="landing-section-col-temp">
+        <h2>Services designed for your success</h2>
 
-      <div class="landing-content-row">
-        <div class="landing-content-col">
-          <p>
-            To succeed in today’s public-service environment, you need to think
-            and be digital. But getting there often requires fundamental practice,
-            culture, and technology change. And that means institutionalizing modern
-            disciplines such as human-centered design, lean-agile engineering, data science,
-            and modular contracting.
-          </p>
+        <img src="img/services-infographic.png" alt="An abstract image of a government building in a computer browser with a green checkmark, surrounded by icons that represent different service functions.">
 
-          <p>
-            We offer services in a number of areas to accelerate your journey to
-            becoming a digital-first agency:
-            <a href="/services/digital-services-delivery">Digital Services Delivery</a>,
-            <a href="/services/digital-procurement">Digital Procurement</a>,
-            and <a href="/services/digital-transformation">Digital Transformation</a>.
-          </p>
+        <p>
+          To succeed in today's public-service environment, you need to think
+          and be digital. But getting there often requires fundamental practice,
+          culture, and technology change. And that means institutionalizing modern
+          disciplines such as human-centered design, lean-agile engineering, data science,
+          and modular contracting.
+        </p>
 
-          <p>
-            These services are designed not only to deliver results, but to also
-            transfer our knowledge of modern principles and practices to you.
-            To facilitate this learning process, we employ a unique practice called
-            <span class="font-italic">embedded instructional design</span>. Even further,
-            we make all of our delivery assets such as methodologies completely free, open,
-            and accessible to you.
-          </p>
+        <p>
+          Our services are designed to <em>accelerate</em> your journey to becoming a
+          digital-first agency.
+        </p>
 
-          <p>
-            <strong>How we work with you</strong> is as important as what we work on together.
-          </p>
-        </div>
-      </div>
-
-      <div class="landing-cta-row">
-        <div class="landing-cta-col">
-          <a class="landing-cta" href="/services/" role="button">Our services</a>
-        </div>
+        <a href="/services/" role="button">Our services</a>
       </div>
     </section>
 
-    <section class="landing-section">
-      <div class="landing-header-row">
-        <div class="landing-header-col">
-          <h2>Experience that speaks volumes</h2>
-          <img style="height: 200px;" class="img-fluid" src="img/experience-infographic.png" alt="TBD">
-        </div>
-      </div>
+    <section class="landing-section-row-temp">
+      <div class="landing-section-col-temp">
+        <h2>Experience to solve your toughest challenges</h2>
 
-      <div class="landing-content-row">
-        <div class="landing-content-col">
-          <p>
-            As a company, we may be new, but we bring a wealth of individual
-            and team experience. We co-founded and scaled 18F, built and sold
-            technology startups, created standards that power the internet, and saved
-            the federal government from hundreds of millions in unnecessary tech costs.
-          </p>
+        <img src="img/experience-infographic.png" alt="An abstract image of a technology maze with an arrow representing how to navigate the complexity.">
 
-          <p>
-            We’re eager, excited, and honored to see what we can do for you.
-          </p>
-        </div>
-      </div>
+        <p>
+          From complex user interactions to entangled technologies to entrenched
+          institutional habits, these are just a few of the many challenges that
+          government must solve in order to deliver great public digital services.
+        </p>
 
-      <div class="landing-cta-row">
-        <div class="landing-cta-col">
-          <a class="landing-cta" href="/work/" role="button">Our work</a>
-        </div>
+        <p>
+          Prior to Skylight, we founded and scaled 18F, built and sold technology
+          startups, created standards that power the internet, and saved the federal
+          government from hundreds of millions in unnecessary tech costs.
+        </p>
+
+        <p>
+          Our experience speaks volumes about what we can do for you.
+        </p>
+
+        <a href="/work/" role="button">Our work</a>
       </div>
     </section>
 
-    <section class="landing-section">
-      <div class="landing-header-row">
-        <div class="landing-header-col">
-          <h2 class="hidden-md-up">Strengthening your culture through ours</h2>
-          <h2 class="hidden-sm-down">Strengthening your culture <br> through ours</h2>
-          <img style="height: 200px;" class="img-fluid" src="img/culture-infographic.png" alt="TBD">
-        </div>
-      </div>
+    <section class="landing-section-row-temp">
+      <div class="landing-section-col-temp">
+        <h2>Strengthening your culture through ours</h2>
 
-      <div class="landing-content-row">
-        <div class="landing-content-col">
-          <p>
-            Our culture is designed to empower you to succeed in a digital world.
-          </p>
+        <img src="img/culture-infographic.png" alt="An abstract image of various government workers with gears and light bulbs in the background.">
 
-          <p>
-            We focus heavily on hiring and developing great people so you can
-            realize the benefits of first-rate digital consulting talent.
-          </p>
+        <p>
+          Culture change is at the heart of achieving digital mastery.
+        </p>
 
-          <p>
-            While our "corporate" strategy and methods can be copied
-            (in fact, we encourage it), our culture can’t be.
-            It’s what makes us unique.
-          </p>
-        </div>
-      </div>
+        <p>
+          From open-sourcing our knowledge to hiring first-rate digital talent
+          to treating every interaction with you as a teaching opportunity,
+          our culture is designed to empower you to succeed in a digital world.
+        </p>
 
-      <div class="landing-cta-row">
-        <div class="landing-cta-col">
-          <a class="landing-cta" href="/culture/" role="button">Our culture</a>
-        </div>
+        <a href="/culture/" role="button">Our culture</a>
       </div>
     </section>
 
