--- a/pages/about.html
+++ b/pages/about.html
@@ -129,7 +129,7 @@ permalink: /about/
           <p>
             If you have a question for us, or would just like to get in touch, drop us a message
             at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
-            If you’d like to inquire about hiring us for a job, <a href="/hire-us/">fill out this short form</a>.
+            If you'd like to inquire about hiring us for a job, <a href="/hire-us/">fill out this short form</a>.
             If you're interested in joining our team, <a href="/join/">send us your information</a>.
             If you'd like to explore forming a partnership to pursue government opportunities,
             <a href="/alliances/">let's talk business</a>.
