--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -14,7 +14,7 @@ permalink: /alliances/
   <div class="alliances-row">
     <div class="text-lead-col">
       <p>
-        We’re embarking on a mission to create a world-class ecosystem of alliances &mdash;
+        We're embarking on a mission to create a world-class ecosystem of alliances &mdash;
         from large companies to independent freelancers &mdash; who are passionate about making
         government work in a digital world.
       </p>
