--- a/pages/join.html
+++ b/pages/join.html
@@ -13,9 +13,9 @@ permalink: /join/
         <h2>Apply now</h2>
 
         <p>
-          We’re looking for great people in the fields of engineering, data science,
+          We're looking for great people in the fields of engineering, data science,
           design, product management, and more to join us in a movement to make government
-          work in a digital world. You’ll work alongside a <a href="/about/#meet-the-team">team of
+          work in a digital world. You'll work alongside a <a href="/about/#meet-the-team">team of
           talented technologists</a> who embody <a href="/culture/">our culture</a> and strive
           to bring out the best in each other.
         </p>
@@ -158,10 +158,10 @@ permalink: /join/
               <label for="authorization-select" aria-describedby="authorization-help">Are you authorized to work in the U.S.?</label>
               <select id="authorization-select" class="form-control">
                 <option disabled selected>-select-</option>
-                <option>Yes, I’m a U.S. citizen.</option>
-                <option>Yes, I’m authorized to work in the U.S., though I’m not a citizen.</option>
+                <option>Yes, I'm a U.S. citizen.</option>
+                <option>Yes, I'm authorized to work in the U.S., though I'm not a citizen.</option>
                 <option>No.</option>
-                <option>I don’t know.</option>
+                <option>I don't know.</option>
               </select>
               <small id="authorization-help" class="form-text text-muted">
                 All positions require work authorization.
@@ -199,12 +199,12 @@ permalink: /join/
           and schools of life.
         </p>
 
-        <h2>Skill sets we’re looking for</h2>
+        <h2>Skill sets we're looking for</h2>
 
         <p>
-          We’re looking for candidates with the hands-on skills, leadership ability,
+          We're looking for candidates with the hands-on skills, leadership ability,
           and growth potential to work with a diverse <a href="/about/#meet-the-team">group of teammates</a>
-          to improve how government delivers public digital services. We’re looking
+          to improve how government delivers public digital services. We're looking
           for the following skills:
         </p>
 
@@ -233,7 +233,7 @@ permalink: /join/
 
         <p>
           This is not an exhaustive list, but it does represent the most common skills
-          that we seek. Don’t see what you do on this list? <a href="/join/#application">Apply anyway!</a>
+          that we seek. Don't see what you do on this list? <a href="/join/#application">Apply anyway!</a>
         </p>
 
         <h2>Who is eligible to work with us</h2>
@@ -273,23 +273,23 @@ permalink: /join/
           </li>
         </ul>
 
-        <h2 id="who-where">Where we’re hiring</h2>
+        <h2 id="who-where">Where we're hiring</h2>
 
         <p>
-          <a href="/about/#hubzone">We’re a certified HUBZone company</a>, which requires <strong>35% of
+          <a href="/about/#hubzone">We're a certified HUBZone company</a>, which requires <strong>35% of
           our employees</strong> to be located in one of the
           <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program/hubzone-maps" target="_blank">many HUBZone-designated areas</a>
           across the country. Our principal office location is in Chapel Hill, North Carolina. If you already
           live in Chapel Hill, or another designated HUBZone area, that certainly makes
           retaining our HUBZone status with the Small Business Administration a lot easier!
-          If you’d like to move to a HUBZone location, particularly Chapel Hill, we may be able
+          If you'd like to move to a HUBZone location, particularly Chapel Hill, we may be able
           to provide <a href="/join/#relocation">relocation assistance</a>.
         </p>
 
         <p>
-          If you don’t currently live in a HUBZone nor plan to in the future, no problem!
+          If you don't currently live in a HUBZone nor plan to in the future, no problem!
           Up to <strong>65% percent of our employees</strong> are <strong>free to live anywhere</strong>
-          in the United States. We’re a distributed and remote-friendly team, with members currently
+          in the United States. We're a distributed and remote-friendly team, with members currently
           divided between Chapel Hill, Austin, and other locations.
         </p>
 
@@ -301,7 +301,7 @@ permalink: /join/
         <h2>Equal opportunity employer</h2>
 
         <p>
-          We’re an Equal Opportunity/Affirmative Action Employer. All qualified applicants will
+          We're an Equal Opportunity/Affirmative Action Employer. All qualified applicants will
           receive consideration for employment without regard to race, color, national origin,
           ancestry, sex, sexual orientation, gender identity or expression, religion, age, pregnancy,
           disability, work-related injury, covered veteran status, political ideology, marital status,
@@ -313,8 +313,8 @@ permalink: /join/
         <h2>Open positions</h2>
 
         <p>
-          We don’t have any open positions at the moment, but be sure to check back regularly.
-          If you’d like to express your interest in future career opportunities with us,
+          We don't have any open positions at the moment, but be sure to check back regularly.
+          If you'd like to express your interest in future career opportunities with us,
           <a href="/join/#application">we encourage you to apply anyway</a>.
         </p>
       </div>
@@ -330,9 +330,9 @@ permalink: /join/
 
         <p>
           Within five days after you <a href="/join/#application">submit your application</a>,
-          we’ll evaluate your information against the qualifications of
+          we'll evaluate your information against the qualifications of
           our <a href="/join/#openings">open positions</a> and communicate next steps.
-          If you look like a potential match, we’ll begin the live interview process.
+          If you look like a potential match, we'll begin the live interview process.
         </p>
 
         <h2>Preliminary screening</h2>
@@ -346,7 +346,7 @@ permalink: /join/
         </p>
 
         <p>
-          If the preliminary screening call goes well, we’ll schedule you for a technical
+          If the preliminary screening call goes well, we'll schedule you for a technical
           interview and a behavioral interview, which are typically held back to back on Fridays.
           Both interviews are generally held by phone or video.
         </p>
@@ -355,10 +355,10 @@ permalink: /join/
 
         <p>
           The technical interview lasts approximately one and a half hours.
-          You’ll be asked a variety of questions about your experience and skills,
-          and how you’d apply them within the context of Skylight’s work. This segment
+          You'll be asked a variety of questions about your experience and skills,
+          and how you'd apply them within the context of Skylight's work. This segment
           of the interview process typically includes a problem-solving (or challenge)
-          exercise related to the role to which you’re applying.
+          exercise related to the role to which you're applying.
         </p>
 
         <h2>Behavioral interview</h2>
@@ -371,36 +371,36 @@ permalink: /join/
         <h2>Additional interviews (if needed)</h2>
 
         <p>
-          In some cases, we’ll conduct additional interviews to evaluate
+          In some cases, we'll conduct additional interviews to evaluate
           skills we want to know more about.
         </p>
 
         <h2>The offer and onboarding process</h2>
 
         <p>
-          If all the interviews go well, you’ll receive a conditional offer
+          If all the interviews go well, you'll receive a conditional offer
           followed by an official offer:
         </p>
 
         <ol>
           <li>
-            You’ll have a call with someone from Skylight to go over your conditional offer,
-            including salary. “Conditional” means it’s contingent on meeting conditions
+            You'll have a call with someone from Skylight to go over your conditional offer,
+            including salary. “Conditional” means it's contingent on meeting conditions
             specific to your position such as passing a government suitability and security review.
-            If you accept the conditional offer, you’ll move on to the next set of steps.
+            If you accept the conditional offer, you'll move on to the next set of steps.
           </li>
 
           <li>
             If a government suitability and security review is required by your position,
-            you’ll fill out a standard government form that covers all your employment,
+            you'll fill out a standard government form that covers all your employment,
             travel, residences, and other types of information for the past several years.
             (For “contracting” positions with the federal government, the standard form is
-            either an SF-85 or SF-86.) You’ll then complete a drug test. You must be able to
+            either an SF-85 or SF-86.) You'll then complete a drug test. You must be able to
             pass through both the background investigation and drug test.
           </li>
 
           <li>
-            Once the conditions of the conditional offer are met, you’ll receive your formal offer.
+            Once the conditions of the conditional offer are met, you'll receive your formal offer.
           </li>
 
           <li>
@@ -415,7 +415,7 @@ permalink: /join/
           background check. Lower level clearances such as “public trust” are more
           thorough than most private-sector background checks. Higher level clearances
           such as “secret” are far more intensive by comparison. The background review
-          process adds some time and forms to the hiring process, but we’ll guide you through it.
+          process adds some time and forms to the hiring process, but we'll guide you through it.
         </p>
 
         <p>
