fix class names

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ title: Home
 
   <div class="landing-body">
 
-    <section class="landing-section-row-temp">
-      <div class="landing-section-col-temp">
+    <section class="landing-section-row">
+      <div class="landing-section-col">
         <h2>Solving important problems</h2>
 
         <img src="img/about-infographic.png" alt="An abstract image of a government building, encircled by icons that represent important government functions.">
@@ -53,8 +53,8 @@ title: Home
       </div>
     </section>
 
-    <section class="landing-section-row-temp">
-      <div class="landing-section-col-temp">
+    <section class="landing-section-row">
+      <div class="landing-section-col">
         <h2>Services designed for your success</h2>
 
         <img src="img/services-infographic.png" alt="An abstract image of a government building in a computer browser with a green checkmark, surrounded by icons that represent different service functions.">
@@ -76,8 +76,8 @@ title: Home
       </div>
     </section>
 
-    <section class="landing-section-row-temp">
-      <div class="landing-section-col-temp">
+    <section class="landing-section-row">
+      <div class="landing-section-col">
         <h2>Experience to solve your toughest challenges</h2>
 
         <img src="img/experience-infographic.png" alt="An abstract image of a technology maze with an arrow representing how to navigate the complexity.">
@@ -102,8 +102,8 @@ title: Home
       </div>
     </section>
 
-    <section class="landing-section-row-temp">
-      <div class="landing-section-col-temp">
+    <section class="landing-section-row">
+      <div class="landing-section-col">
         <h2>Strengthening your culture through ours</h2>
 
         <img src="img/culture-infographic.png" alt="An abstract image of various government workers with gears and light bulbs in the background.">
