add hubzone notice

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ title: Home
 
         <p>
           From open-sourcing our knowledge to hiring first-rate digital talent
-          to treating every interaction with you as a teaching opportunity,
+          to treating every interaction as a teaching opportunity,
           our culture is designed to empower you to succeed in a digital world.
         </p>
 
