massively improved page headers

--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -6,7 +6,7 @@ permalink: /alliances/
 
 {% include page_header.html
   header_title = 'Let&apos;s partner!'
-  header_css_class = 'page-header-1'
+  header_class = 'page-header-1'
 %}
 
 <div class="alliances">
