--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -6,7 +6,7 @@ permalink: /hire-us/
 
 {% include page_header.html
   header_title = 'Let&apos;s deliver something great.'
-  header_css_class = 'page-header-1'
+  header_class = 'page-header-1'
 %}
 
 <div class="hire-us">
