--- a/pages/policies.html
+++ b/pages/policies.html
@@ -5,7 +5,7 @@ permalink: /policies/
 ---
 
 {% include page_header.html
-  header_css_class = 'page-header-1'
+  header_class = 'page-header-1'
 %}
 
 <div class="our-policies">
